fgs25 speakers updates

--- a/directories/fiware-summit/speakers/filters.html
+++ b/directories/fiware-summit/speakers/filters.html
@@ -50,6 +50,7 @@
             <select name='' id='filterCompany' class='dropdown-last'>
                 <option value='*'>All Organisations</option>
                         <option value='addix'>ADDIX</option>
+                        <option value='african-smart-territories'>African Smart Territories</option>
                         <option value='al-akhawayn-university'>Al Akhawayn University</option>
                         <option value='artech-international'>Artech International</option>
                         <option value='ausim'>AUSIM</option>
@@ -73,7 +74,6 @@
                         <option value='ishare-foundation'>iSHARE Foundation</option>
                         <option value='latitudo-40'>Latitudo 40</option>
                         <option value='majal-berkane'>Majal Berkane</option>
-                        <option value='maroc-numeric-cluster'>Maroc Numeric Cluster</option>
                         <option value='meaningfy'>Meaningfy</option>
                         <option value='mitsubishi-electric-corporation'>Mitsubishi Electric Corporation</option>
                         <option value='nec-corporation'>NEC Corporation</option>
@@ -109,11 +109,12 @@
                         <option value='architect'>Architect</option>
                         <option value='assistant-professor'>Assistant Professor</option>
                         <option value='business-developer'>Business Developer</option>
-                        <option value='cbo'>CBO</option>
+                        <option value='cbdo'>CBDO</option>
                         <option value='ceo'>CEO</option>
                         <option value='chairman'>Chairman</option>
                         <option value='ciso'>CISO</option>
                         <option value='co-founder'>Co-founder</option>
+                        <option value='co-founder'>Co-Founder</option>
                         <option value='coo'>COO</option>
                         <option value='coordinator'>Coordinator</option>
                         <option value='cto'>CTO</option>
@@ -137,7 +138,6 @@
                         <option value='researcher'>Researcher</option>
                         <option value='senior-manager'>Senior Manager</option>
                         <option value='software-engineer'>Software Engineer</option>
-                        <option value='technical-expert'>Technical Expert</option>
                         <option value='technical-manager'>Technical Manager</option>
                         <option value='vice-president'>Vice-President</option>
             </select>
