--- a/directories/fiware-summit/speakers/people.html
+++ b/directories/fiware-summit/speakers/people.html
@@ -244,7 +244,7 @@
                 </div>
             </div>
         </div>
-        <div id="item-10" class="grid-item fiware-foundation   technical-expert evangelist ">
+        <div id="item-10" class="grid-item fiware-foundation   expert evangelist ">
             <div class='f-cat active'>
                 <div class='city-photo-container'>
                     <picture>
@@ -254,7 +254,7 @@
                 </div>
                 <div class='profile-details'>
                     <h6 class='name' data-modal='10'>David Campo</h6>
-                    <h4 class='position' data-modal='10'>Senior Technical Expert &amp; Evangelist</h4>
+                    <h4 class='position' data-modal='10'>Tech Expert &amp; Evangelist – AI</h4>
                     <h5 class='company-link'><a target='_blank' href='https://www.fiware.org/' rel='noopener'>FIWARE Foundation</a></h5>
                 </div>
                 <div class='icons'>
@@ -294,7 +294,7 @@
                 </div>
             </div>
         </div>
-        <div id="item-12" class="grid-item dksr   cbo ">
+        <div id="item-12" class="grid-item dksr   cbdo ">
             <div class='f-cat active'>
                 <div class='cat-bio' data-modal='12'>
                 <div class='city-photo-container'>
@@ -306,7 +306,7 @@
                 </div>
                 <div class='profile-details'>
                     <h6 class='name cat-bio' data-modal='12'>Tim Cleffmann</h6>
-                    <h4 class='position cat-bio' data-modal='12'>Chief Business Development Officer</h4>
+                    <h4 class='position cat-bio' data-modal='12'>CBDO</h4>
                     <h5 class='company-link'><a target='_blank' href='https://www.dksr.city/en/' rel='noopener'>DKSR</a></h5>
                 </div>
                 <div class='icons'>
@@ -659,7 +659,7 @@
                 </div>
                 <div class='profile-details'>
                     <h6 class='name cat-bio' data-modal='26'>Prof. Mohamed Essaidi</h6>
-                    <h4 class='position cat-bio' data-modal='26'>Professor &amp; Former Director ENSIAS College of Engineering</h4>
+                    <h4 class='position cat-bio' data-modal='26'>Professor</h4>
                     <h5 class='company-link'><a target='_blank' href='https://www.um5.ac.ma/um5/' rel='noopener'>UM5</a></h5>
                 </div>
                 <div class='icons'>
@@ -715,7 +715,7 @@
                 </div>
             </div>
         </div>
-        <div id="item-29" class="grid-item fiware-foundation   expert evangelist ">
+        <div id="item-29" class="grid-item fiware-foundation   manager evangelist ">
             <div class='f-cat active'>
                 <div class='cat-bio' data-modal='29'>
                 <div class='city-photo-container'>
@@ -727,7 +727,7 @@
                 </div>
                 <div class='profile-details'>
                     <h6 class='name cat-bio' data-modal='29'>Jason Fox</h6>
-                    <h4 class='position cat-bio' data-modal='29'>Senior Technical Expert &amp; Evangelist</h4>
+                    <h4 class='position cat-bio' data-modal='29'>Tech Community Manager &amp; Evangelist</h4>
                     <h5 class='company-link'><a target='_blank' href='https://www.fiware.org/' rel='noopener'>FIWARE Foundation</a></h5>
                 </div>
                 <div class='icons'>
@@ -928,8 +928,8 @@
                 </div>
                 <div class='profile-details'>
                     <h6 class='name cat-bio' data-modal='37'>Dr. Jin Kawasaki</h6>
-                    <h4 class='position cat-bio' data-modal='37'>Senior Expert - Information Technology R&amp;D Center</h4>
-                    <h5 class='company-link'><a target='_blank' href='https://www.mitsubishielectric.com/en/index.html' rel='noopener'>Mitsubishi Electric Corporation</a></h5>
+                    <h4 class='position cat-bio' data-modal='37'>Senior Expert</h4>
+                    <h5 class='company-link'><a target='_blank' href='https://www.mitsubishielectric.com/rd/research/information_technology/index.html' rel='noopener'>Mitsubishi Electric Corporation</a></h5>
                 </div>
                 <div class='icons'>
                         <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/jin-kawasaki-817809205/?original_referer&#x3D;https%3A%2F%2Fwww%2Egoogle%2Ecom%2F&amp;originalSubdomain&#x3D;jp' rel='noopener'><span
@@ -1046,7 +1046,7 @@
                 </div>
             </div>
         </div>
-        <div id="item-42" class="grid-item fiware-foundation   expert evangelist ">
+        <div id="item-42" class="grid-item fiware-foundation   coordinator ">
             <div class='f-cat active'>
                 <div class='cat-bio' data-modal='42'>
                 <div class='city-photo-container'>
@@ -1519,8 +1519,8 @@
                 </div>
                 <div class='profile-details'>
                     <h6 class='name cat-bio' data-modal='60'>Megumi Suzuki</h6>
-                    <h4 class='position cat-bio' data-modal='60'>Researcher - Information Technology R&amp;D Center</h4>
-                    <h5 class='company-link'><a target='_blank' href='https://www.mitsubishielectric.com/en/index.html' rel='noopener'>Mitsubishi Electric Corporation</a></h5>
+                    <h4 class='position cat-bio' data-modal='60'>Researcher</h4>
+                    <h5 class='company-link'><a target='_blank' href='https://www.mitsubishielectric.com/rd/research/information_technology/index.html' rel='noopener'>Mitsubishi Electric Corporation</a></h5>
                 </div>
                 <div class='icons'>
                     <a class="btn-primary" href="https://www.fiware.org/global-summit/agenda/?speaker=megumi-suzuki">
@@ -1530,7 +1530,7 @@
                 </div>
             </div>
         </div>
-        <div id="item-61" class="grid-item maroc-numeric-cluster   manager ">
+        <div id="item-61" class="grid-item african-smart-territories   ceo co-founder ">
             <div class='f-cat active'>
                 <div class='cat-bio' data-modal='61'>
                 <div class='city-photo-container'>
@@ -1542,8 +1542,8 @@
                 </div>
                 <div class='profile-details'>
                     <h6 class='name cat-bio' data-modal='61'>Sanaa Tazi</h6>
-                    <h4 class='position cat-bio' data-modal='61'>General Manager</h4>
-                    <h5 class='company-link'><a target='_blank' href='https://mnc.ma/en/accueil-english/' rel='noopener'>Maroc Numeric Cluster</a></h5>
+                    <h4 class='position cat-bio' data-modal='61'>CEO and Co-founder</h4>
+                    <h5 class='company-link'><a target='_blank' href='https://mnc.ma/en/accueil-english/' rel='noopener'>African Smart Territories</a></h5>
                 </div>
                 <div class='icons'>
                         <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/sanaa-tazi-15579174/' rel='noopener'><span
@@ -1684,7 +1684,7 @@
                 </div>
             </div>
         </div>
-        <div id="item-67" class="grid-item fiware-foundation   architect ">
+        <div id="item-67" class="grid-item fiware-foundation   architect evangelist ">
             <div class='f-cat active'>
                 <div class='cat-bio' data-modal='67'>
                 <div class='city-photo-container'>
