fgs25 agenda content and images updates

--- a/directories/fiware-summit/agenda/agenda.html
+++ b/directories/fiware-summit/agenda/agenda.html
@@ -489,7 +489,7 @@
           </div>
           <div class="speaker-info">
             <div class="speaker-name">Jason Fox</div>
-            <div class="speaker-job-title">Expert</div>
+            <div class="speaker-job-title">Manager</div>
             <div class="speaker-company">FIWARE Foundation</div>
             <div class="btn-icon">
       				<span class="material-symbols-outlined icon cta small">trending_flat</span>
@@ -811,7 +811,7 @@
           </div>
           <div class="speaker-info">
             <div class="speaker-name">Jason Fox</div>
-            <div class="speaker-job-title">Expert</div>
+            <div class="speaker-job-title">Manager</div>
             <div class="speaker-company">FIWARE Foundation</div>
             <div class="btn-icon">
       				<span class="material-symbols-outlined icon cta small">trending_flat</span>
@@ -1295,7 +1295,7 @@
           </div>
           <div class="speaker-info">
             <div class="speaker-name">David Campo</div>
-            <div class="speaker-job-title">Technical Expert</div>
+            <div class="speaker-job-title">Expert</div>
             <div class="speaker-company">FIWARE Foundation</div>
             <div class="btn-icon">
       				<span class="material-symbols-outlined icon cta small">trending_flat</span>
@@ -1541,7 +1541,7 @@
           </div>
           <div class="speaker-info">
             <div class="speaker-name">Jason Fox</div>
-            <div class="speaker-job-title">Expert</div>
+            <div class="speaker-job-title">Manager</div>
             <div class="speaker-company">FIWARE Foundation</div>
             <div class="btn-icon">
       				<span class="material-symbols-outlined icon cta small">trending_flat</span>
@@ -2157,7 +2157,7 @@
           </div>
           <div class="speaker-info">
             <div class="speaker-name">Jason Fox</div>
-            <div class="speaker-job-title">Expert</div>
+            <div class="speaker-job-title">Manager</div>
             <div class="speaker-company">FIWARE Foundation</div>
             <div class="btn-icon">
       				<span class="material-symbols-outlined icon cta small">trending_flat</span>
@@ -2422,7 +2422,7 @@
           </div>
           <div class="speaker-info">
             <div class="speaker-name">Tim Cleffmann</div>
-            <div class="speaker-job-title">CBO</div>
+            <div class="speaker-job-title">CBDO</div>
             <div class="speaker-company">DKSR</div>
             <div class="btn-icon">
       				<span class="material-symbols-outlined icon cta small">trending_flat</span>
@@ -2463,7 +2463,7 @@
           </div>
           <div class="speaker-info">
             <div class="speaker-name">Jason Fox</div>
-            <div class="speaker-job-title">Expert</div>
+            <div class="speaker-job-title">Manager</div>
             <div class="speaker-company">FIWARE Foundation</div>
             <div class="btn-icon">
       				<span class="material-symbols-outlined icon cta small">trending_flat</span>
@@ -2831,7 +2831,7 @@
           </div>
           <div class="speaker-info">
             <div class="speaker-name">Jason Fox</div>
-            <div class="speaker-job-title">Expert</div>
+            <div class="speaker-job-title">Manager</div>
             <div class="speaker-company">FIWARE Foundation</div>
             <div class="btn-icon">
       				<span class="material-symbols-outlined icon cta small">trending_flat</span>
@@ -2920,7 +2920,7 @@
           </div>
           <div class="speaker-info">
             <div class="speaker-name">Jason Fox</div>
-            <div class="speaker-job-title">Expert</div>
+            <div class="speaker-job-title">Manager</div>
             <div class="speaker-company">FIWARE Foundation</div>
             <div class="btn-icon">
       				<span class="material-symbols-outlined icon cta small">trending_flat</span>
@@ -3197,7 +3197,7 @@
           </div>
           <div class="speaker-info">
             <div class="speaker-name">David Campo</div>
-            <div class="speaker-job-title">Technical Expert</div>
+            <div class="speaker-job-title">Expert</div>
             <div class="speaker-company">FIWARE Foundation</div>
             <div class="btn-icon">
       				<span class="material-symbols-outlined icon cta small">trending_flat</span>
@@ -3390,7 +3390,7 @@
           </div>
           <div class="speaker-info">
             <div class="speaker-name">Francisco Meléndez</div>
-            <div class="speaker-job-title">Expert</div>
+            <div class="speaker-job-title">Coordinator</div>
             <div class="speaker-company">FIWARE Foundation</div>
             <div class="btn-icon">
       				<span class="material-symbols-outlined icon cta small">trending_flat</span>
@@ -3554,7 +3554,7 @@
           </div>
           <div class="speaker-info">
             <div class="speaker-name">Francisco Meléndez</div>
-            <div class="speaker-job-title">Expert</div>
+            <div class="speaker-job-title">Coordinator</div>
             <div class="speaker-company">FIWARE Foundation</div>
             <div class="btn-icon">
       				<span class="material-symbols-outlined icon cta small">trending_flat</span>
@@ -3853,7 +3853,7 @@
           </div>
           <div class="speaker-info">
             <div class="speaker-name">Jason Fox</div>
-            <div class="speaker-job-title">Expert</div>
+            <div class="speaker-job-title">Manager</div>
             <div class="speaker-company">FIWARE Foundation</div>
             <div class="btn-icon">
       				<span class="material-symbols-outlined icon cta small">trending_flat</span>
@@ -4000,7 +4000,7 @@
           </div>
           <div class="speaker-info">
             <div class="speaker-name">Jason Fox</div>
-            <div class="speaker-job-title">Expert</div>
+            <div class="speaker-job-title">Manager</div>
             <div class="speaker-company">FIWARE Foundation</div>
             <div class="btn-icon">
       				<span class="material-symbols-outlined icon cta small">trending_flat</span>
