fgs25 speakers updates

--- a/directories/fiware-summit/speakers/filters.html
+++ b/directories/fiware-summit/speakers/filters.html
@@ -66,7 +66,7 @@
                         <option value='fh-kiel'>FH Kiel</option>
                         <option value='ficodes'>FICODES</option>
                         <option value='fiware-foundation'>FIWARE Foundation</option>
-                        <option value='fiware-technical-steering-committee'>FIWARE Technical Steering Committee</option>
+                        <option value='fiware-tsc'>FIWARE TSC</option>
                         <option value='futurecraft-foundation'>FutureCraft Foundation</option>
                         <option value='giz'>GIZ</option>
                         <option value='government-of-morocco'>Government of Morocco</option>
@@ -78,7 +78,6 @@
                         <option value='mitsubishi-electric-corporation'>Mitsubishi Electric Corporation</option>
                         <option value='nec-corporation'>NEC Corporation</option>
                         <option value='oasc'>OASC</option>
-                        <option value='parthenope-university-of-naples'>Parthenope University of Naples</option>
                         <option value='porto-digital'>Porto Digital</option>
                         <option value='prisalya-consulting'>PRISALYA Consulting</option>
                         <option value='prometheus-x'>Prometheus-x</option>
@@ -86,7 +85,7 @@
                         <option value='rhamna-provincial-council'>Rhamna Provincial Council</option>
                         <option value='rise'>RISE</option>
                         <option value='secmotic'>Secmotic</option>
-                        <option value='senlab-d-o-o-'>SenLab d.o.o.</option>
+                        <option value='senlab'>SenLab</option>
                         <option value='sirus'>Sirus</option>
                         <option value='smart-cities-morocco-alliance'>Smart Cities Morocco Alliance</option>
                         <option value='teamdev-ecosystem'>TeamDev Ecosystem</option>
@@ -113,7 +112,6 @@
                         <option value='ceo'>CEO</option>
                         <option value='chairman'>Chairman</option>
                         <option value='ciso'>CISO</option>
-                        <option value='co-founder'>Co-founder</option>
                         <option value='co-founder'>Co-Founder</option>
                         <option value='coo'>COO</option>
                         <option value='coordinator'>Coordinator</option>
@@ -132,14 +130,11 @@
                         <option value='minister'>Minister</option>
                         <option value='owner'>Owner</option>
                         <option value='president'>President</option>
-                        <option value='product-manager'>Product Manager</option>
                         <option value='professor'>Professor</option>
-                        <option value='program-manager'>Program Manager</option>
                         <option value='researcher'>Researcher</option>
-                        <option value='senior-manager'>Senior Manager</option>
                         <option value='software-engineer'>Software Engineer</option>
                         <option value='technical-manager'>Technical Manager</option>
-                        <option value='vice-president'>Vice-President</option>
+                        <option value='vp'>VP</option>
             </select>
         </div>
 
