--- a/directories/fiware-summit/speakers/people.html
+++ b/directories/fiware-summit/speakers/people.html
@@ -50,7 +50,7 @@
                 </div>
             </div>
         </div>
-        <div id="item-2" class="grid-item city-of-marrakech   senior-manager ">
+        <div id="item-2" class="grid-item city-of-marrakech   manager ">
             <div class='f-cat active'>
                 <div class='city-photo-container'>
                     <picture>
@@ -105,7 +105,7 @@
                 </div>
                 <div class='profile-details'>
                     <h6 class='name' data-modal='4'>Mohamed Benabbad</h6>
-                    <h4 class='position' data-modal='4'>CTO</h4>
+                    <h4 class='position' data-modal='4'>Chief Technology Officer</h4>
                     <h5 class='company-link'><a target='_blank' href='' rel='noopener'>Rhamna Provincial Council</a></h5>
                 </div>
                 <div class='icons'>
@@ -306,7 +306,7 @@
                 </div>
                 <div class='profile-details'>
                     <h6 class='name cat-bio' data-modal='12'>Tim Cleffmann</h6>
-                    <h4 class='position cat-bio' data-modal='12'>CBDO</h4>
+                    <h4 class='position cat-bio' data-modal='12'>Chief Business Development Officer</h4>
                     <h5 class='company-link'><a target='_blank' href='https://www.dksr.city/en/' rel='noopener'>DKSR</a></h5>
                 </div>
                 <div class='icons'>
@@ -450,7 +450,7 @@
                 </div>
             </div>
         </div>
-        <div id="item-18" class="grid-item um5   vice-president ciso ">
+        <div id="item-18" class="grid-item um5   vp ciso ">
             <div class='f-cat active'>
                 <div class='city-photo-container'>
                     <picture>
@@ -633,7 +633,7 @@
                 </div>
                 <div class='profile-details'>
                     <h6 class='name cat-bio' data-modal='25'>El Mehdi Erroussafi</h6>
-                    <h4 class='position cat-bio' data-modal='25'>CEO</h4>
+                    <h4 class='position cat-bio' data-modal='25'>Chief Executive Officer</h4>
                     <h5 class='company-link'><a target='_blank' href='https://www.prisalya.com/' rel='noopener'>PRISALYA Consulting</a></h5>
                 </div>
                 <div class='icons'>
@@ -704,7 +704,7 @@
                 </div>
                 <div class='profile-details'>
                     <h6 class='name' data-modal='28'>Guven Fidan</h6>
-                    <h4 class='position' data-modal='28'>CTO</h4>
+                    <h4 class='position' data-modal='28'>Chief Technology Officer</h4>
                     <h5 class='company-link'><a target='_blank' href='https://www.artechconsulting.net' rel='noopener'>Artech International</a></h5>
                 </div>
                 <div class='icons'>
@@ -864,7 +864,7 @@
                 </div>
             </div>
         </div>
-        <div id="item-35" class="grid-item fiware-technical-steering-committee   chairman ">
+        <div id="item-35" class="grid-item fiware-tsc   chairman ">
             <div class='f-cat active'>
                 <div class='cat-bio' data-modal='35'>
                 <div class='city-photo-container'>
@@ -877,7 +877,7 @@
                 <div class='profile-details'>
                     <h6 class='name cat-bio' data-modal='35'>Juanjo Hierro</h6>
                     <h4 class='position cat-bio' data-modal='35'>Chairman</h4>
-                    <h5 class='company-link'><a target='_blank' href='' rel='noopener'>FIWARE Technical Steering Committee</a></h5>
+                    <h5 class='company-link'><a target='_blank' href='https://www.fiware.org/governance/tsc/' rel='noopener'>FIWARE TSC</a></h5>
                 </div>
                 <div class='icons'>
                         <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/jhierro/' rel='noopener'><span
@@ -954,7 +954,7 @@
                 </div>
                 <div class='profile-details'>
                     <h6 class='name cat-bio' data-modal='38'>Zouheir Lakhdissi</h6>
-                    <h4 class='position cat-bio' data-modal='38'>CEO and Co-founder</h4>
+                    <h4 class='position cat-bio' data-modal='38'>CEO and Co-Founder</h4>
                     <h5 class='company-link'><a target='_blank' href='http://www.dialy.net/' rel='noopener'>Dial Technologies</a></h5>
                 </div>
                 <div class='icons'>
@@ -968,7 +968,7 @@
                 </div>
             </div>
         </div>
-        <div id="item-39" class="grid-item senlab-d-o-o-   ceo owner ">
+        <div id="item-39" class="grid-item senlab   ceo owner ">
             <div class='f-cat active'>
                 <div class='cat-bio' data-modal='39'>
                 <div class='city-photo-container'>
@@ -981,7 +981,7 @@
                 <div class='profile-details'>
                     <h6 class='name cat-bio' data-modal='39'>Jure Lampe</h6>
                     <h4 class='position cat-bio' data-modal='39'>Chief Executive Officer</h4>
-                    <h5 class='company-link'><a target='_blank' href='https://senlab.io/en/about-us' rel='noopener'>SenLab d.o.o.</a></h5>
+                    <h5 class='company-link'><a target='_blank' href='https://senlab.io/en/about-us' rel='noopener'>SenLab</a></h5>
                 </div>
                 <div class='icons'>
                         <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/jurelampe/' rel='noopener'><span
@@ -1254,7 +1254,7 @@
                 </div>
             </div>
         </div>
-        <div id="item-50" class="grid-item telefonica   product-manager ">
+        <div id="item-50" class="grid-item telefonica   manager ">
             <div class='f-cat active'>
                 <div class='city-photo-container'>
                     <picture>
@@ -1380,7 +1380,7 @@
                 </div>
             </div>
         </div>
-        <div id="item-55" class="grid-item parthenope-university-of-naples   professor ">
+        <div id="item-55" class="grid-item university-of-naples-parthenope   professor ">
             <div class='f-cat active'>
                 <div class='cat-bio' data-modal='55'>
                 <div class='city-photo-container'>
@@ -1393,7 +1393,7 @@
                 <div class='profile-details'>
                     <h6 class='name cat-bio' data-modal='55'>Prof. Luigi Romano</h6>
                     <h4 class='position cat-bio' data-modal='55'>Professor</h4>
-                    <h5 class='company-link'><a target='_blank' href='https://international.uniparthenop' rel='noopener'>Parthenope University of Naples</a></h5>
+                    <h5 class='company-link'><a target='_blank' href='https://international.uniparthenop' rel='noopener'>University of Naples Parthenope</a></h5>
                 </div>
                 <div class='icons'>
                     <a class="btn-primary" href="https://www.fiware.org/global-summit/agenda/?speaker=luigi-romano">
@@ -1542,7 +1542,7 @@
                 </div>
                 <div class='profile-details'>
                     <h6 class='name cat-bio' data-modal='61'>Sanaa Tazi</h6>
-                    <h4 class='position cat-bio' data-modal='61'>CEO and Co-founder</h4>
+                    <h4 class='position cat-bio' data-modal='61'>CEO and Co-Founder</h4>
                     <h5 class='company-link'><a target='_blank' href='https://mnc.ma/en/accueil-english/' rel='noopener'>African Smart Territories</a></h5>
                 </div>
                 <div class='icons'>
@@ -1556,7 +1556,7 @@
                 </div>
             </div>
         </div>
-        <div id="item-62" class="grid-item fiware-foundation   program-manager ">
+        <div id="item-62" class="grid-item fiware-foundation   manager ">
             <div class='f-cat active'>
                 <div class='cat-bio' data-modal='62'>
                 <div class='city-photo-container'>
