fgs25 agenda updates

--- a/directories/fiware-summit/agenda/calendar.html
+++ b/directories/fiware-summit/agenda/calendar.html
@@ -361,7 +361,7 @@ li {
 		</li>
 		<li>
             
-			<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=Blue Cities of Tomorrow: AI &amp; IoT for Smart Water and Resilient Cities&details=AI &amp; IoTBlue Cities of Tomorrow: AI &amp; IoT for Smart Water and Resilient Cities: Real-Time Monitoring, Planning, and Emergency Response   This session brings together three innovative solutions using IoT, AI, and open digital standards to tackle one of our most critical challenges: urban water resilience.++Speakers:+Didac Colominas,Javier Galvez Campanelli,Eloy Hernandez,Lydia Montandon,Ángeles Tejado,,&ctz=Africa/Casablanca&location=Room Saghro&dates=20250522T143000/20250522T150000">Blue Cities of Tomorrow: AI &amp; IoT for Smart Water and Resilient Cities</a>
+			<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=Blue Cities of Tomorrow: AI &amp; IoT for Smart Water and Resilient Cities&details=AI &amp; IoTBlue Cities of Tomorrow: AI &amp; IoT for Smart Water and Resilient Cities: Real-Time Monitoring, Planning, and Emergency Response   This session brings together three innovative solutions using IoT, AI, and open digital standards to tackle one of our most critical challenges: urban water resilience.++Speakers:+Didac Colominas,Jose Alvaro,Eloy Hernandez,Lydia Montandon,Ángeles Tejado,,&ctz=Africa/Casablanca&location=Room Saghro&dates=20250522T143000/20250522T150000">Blue Cities of Tomorrow: AI &amp; IoT for Smart Water and Resilient Cities</a>
              - AI &amp; IoT
 			<div class="date-time">
 	            <span class="separator-dot"></span>
@@ -460,7 +460,7 @@ li {
 		</li>
 		<li>
             
-			<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=AsterIoT: A Scalable FIWARE-Based Platform for Smart Water Management and Early Warning Systems&details=AI &amp; IoT - Blue Cities of Tomorrow: AI &amp; IoT for Smart Water and Resilient Cities++++Speakers:+Javier Galvez Campanelli,,&ctz=Africa/Casablanca&location=Room Saghro&dates=20250522T145000/20250522T150000">AsterIoT: A Scalable FIWARE-Based Platform for Smart Water Management and Early Warning Systems</a>
+			<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=AsterIoT: A Scalable FIWARE-Based Platform for Smart Water Management and Early Warning Systems&details=AI &amp; IoT - Blue Cities of Tomorrow: AI &amp; IoT for Smart Water and Resilient Cities++++Speakers:+Jose Alvaro,,&ctz=Africa/Casablanca&location=Room Saghro&dates=20250522T145000/20250522T150000">AsterIoT: A Scalable FIWARE-Based Platform for Smart Water Management and Early Warning Systems</a>
              - AI &amp; IoT - Blue Cities of Tomorrow: AI &amp; IoT for Smart Water and Resilient Cities
 			<div class="date-time">
 	            <span class="separator-dot"></span>
