--- a/directories/fiware-summit/agenda/filters.html
+++ b/directories/fiware-summit/agenda/filters.html
@@ -94,6 +94,7 @@
       <option value="*">Speakers</option>
           <option value='alberto-abella'>Alberto Abella</option>
           <option value='suna-akbayir'>Suna Akbayir</option>
+          <option value='jose-alvaro'>Jose Alvaro</option>
           <option value='fatima-azmarkou'>Fatima Azmarkou</option>
           <option value='joão-bastos'>João Bastos</option>
           <option value='mohamed-benabbad'>Mohamed Benabbad</option>
@@ -120,7 +121,6 @@
           <option value='mohamed-essaidi'>Mohamed Essaidi</option>
           <option value='guven-fidan'>Guven Fidan</option>
           <option value='jason-fox'>Jason Fox</option>
-          <option value='javier-galvez-campanelli'>Javier Galvez Campanelli</option>
           <option value='giovanni-giacco'>Giovanni Giacco</option>
           <option value='gerardo-guarino-f-'>Gerardo Guarino F.</option>
           <option value='aawatif-hayar'>Aawatif Hayar</option>
