fgs25 speakers updates

--- a/directories/fiware-summit/speakers/people.html
+++ b/directories/fiware-summit/speakers/people.html
@@ -1126,7 +1126,7 @@
                 </div>
             </div>
         </div>
-        <div id="item-45" class="grid-item fiware-foundation   lead ">
+        <div id="item-45" class="grid-item fiware-foundation   coordinator ">
             <div class='f-cat active'>
                 <div class='cat-bio' data-modal='45'>
                 <div class='city-photo-container'>
@@ -1138,7 +1138,7 @@
                 </div>
                 <div class='profile-details'>
                     <h6 class='name cat-bio' data-modal='45'>Lydia Montandon</h6>
-                    <h4 class='position cat-bio' data-modal='45'>Communications Lead &amp; Project Manager</h4>
+                    <h4 class='position cat-bio' data-modal='45'>Community Outreach Coordinator</h4>
                     <h5 class='company-link'><a target='_blank' href='https://www.fiware.org/' rel='noopener'>FIWARE Foundation</a></h5>
                 </div>
                 <div class='icons'>
