fgs25 agenda updates

--- a/directories/fiware-summit/agenda/filters.html
+++ b/directories/fiware-summit/agenda/filters.html
@@ -94,7 +94,6 @@
       <option value="*">Speakers</option>
           <option value='alberto-abella'>Alberto Abella</option>
           <option value='suna-akbayir'>Suna Akbayir</option>
-          <option value='jose-alvaro'>Jose Alvaro</option>
           <option value='fatima-azmarkou'>Fatima Azmarkou</option>
           <option value='joão-bastos'>João Bastos</option>
           <option value='mohamed-benabbad'>Mohamed Benabbad</option>
@@ -131,6 +130,7 @@
           <option value='zouheir-lakhdissi'>Zouheir Lakhdissi</option>
           <option value='jure-lampe'>Jure Lampe</option>
           <option value='frederico-lopes'>Frederico Lopes</option>
+          <option value='jose-luis-alvaro'>Jose Luis Alvaro</option>
           <option value='davor-meersman'>Davor Meersman</option>
           <option value='el-mehdi-erroussafi'>El Mehdi Erroussafi</option>
           <option value='francisco-meléndez'>Francisco Meléndez</option>
