fgs25 agenda content updates

--- a/directories/fiware-summit/agenda/agenda.html
+++ b/directories/fiware-summit/agenda/agenda.html
@@ -186,7 +186,7 @@
           <div class="track light-orange">Grand Opening</div>
           
         </div>
-        <p class="panel-title light-orange ">General Directorate of Territorial Collectivities, Ministry of Interior in Morocco</p> 
+        <p class="panel-title light-orange ">General Direction of Territorial Collectivities</p> 
         <span class="excerpt">Official Speeches</span>
         <div class="panel-info">
           <div class="date-time">
