--- a/directories/fiware-summit/agenda/calendar.html
+++ b/directories/fiware-summit/agenda/calendar.html
@@ -130,7 +130,7 @@ li {
 		</li>
 		<li>
             
-			<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=General Directorate of Territorial Collectivities, Ministry of Interior in Morocco&details=Grand Opening - Official Speeches++&ctz=Africa/Casablanca&location=Auditorium Atlas&dates=20250522T092000/20250522T093000">General Directorate of Territorial Collectivities, Ministry of Interior in Morocco</a>
+			<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=General Direction of Territorial Collectivities&details=Grand Opening - Official Speeches++&ctz=Africa/Casablanca&location=Auditorium Atlas&dates=20250522T092000/20250522T093000">General Direction of Territorial Collectivities</a>
              - Grand Opening - Official Speeches
 			<div class="date-time">
 	            <span class="separator-dot"></span>
